--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     class="logo-first">Web</span>Studio</a>
             <ul class="list">
                 <li><a class="navigation" href="#Студия">Студия</a></li>
-                <li><a class="navigation" href="#Портфолио">Портфолио</a></li>
+                <li><a class="navigation" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="navigation" href="#Контакты">Контакты</a></li>
             </ul>
         </nav>
