--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <a class="logo" lang="en" href="./index.html" target="_blank" rel="noreferrer noopener"><span
                     class="logo-first">Web</span>Studio</a>
             <ul class="list">
-                <li><a class="navigation" href="#Студия">Студия</a></li>
+                <li><a class="navigation" href="./index.html">Студия</a></li>
                 <li><a class="navigation" href="#Портфолио">Портфолио</a></li>
                 <li><a class="navigation" href="#Контакты">Контакты</a></li>
             </ul>
