--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                 <li><button type="button" class="list-button">Маркетинг</button></li>
             </ul>
 
-            <ul class="list">
+            <ul class="list list-menu">
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-1.jpg" alt="Сайт">
                         <h2 class="list-header">Технокряк</h2>
