--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     class="logo-first">Web</span>Studio</a>
             <ul class="list">
                 <li><a class="navigation" href="./index.html">Студия</a></li>
-                <li><a class="navigation" href="#Портфолио">Портфолио</a></li>
+                <li><a class="navigation current" href="#Портфолио">Портфолио</a></li>
                 <li><a class="navigation" href="#Контакты">Контакты</a></li>
             </ul>
         </nav>
