--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="logo" lang="en" href="WebStudio" target="_blank" rel="noreferrer noopener"><span
                     class="logo-first">Web</span>Studio</a>
             <ul class="list">
-                <li><a class="navigation" href="#Студия">Студия</a></li>
+                <li><a class="navigation current" href="#Студия">Студия</a></li>
                 <li><a class="navigation" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="navigation" href="#Контакты">Контакты</a></li>
             </ul>
