--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body class="body">
 
     <header>
-        <nav>
+        <nav class="navigation">
             <a class="logo" lang="en" href="WebStudio" target="_blank" rel="noreferrer noopener"><span
                     class="logo-first">Web</span>Studio</a>
             <ul class="list">
-                <li><a class="navigation current" href="#Студия">Студия</a></li>
-                <li><a class="navigation" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="navigation" href="#Контакты">Контакты</a></li>
+                <li><a class="navigation-list current" href="#Студия">Студия</a></li>
+                <li><a class="navigation-list" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="navigation-list" href="#Контакты">Контакты</a></li>
             </ul>
         </nav>
         <ul class="list">
@@ -39,28 +39,28 @@
             <button class="hero-button" type="button">Заказать услугу</button>
         </section>
 
-        <section class="lists">
+        <section class="features">
             <ul class="list">
                 <li>
-                    <h3 class="list-title">Внимание к деталям</h3>
-                    <p class="list-text">Идейные соображения, а также начало повседневной работы по формированию
+                    <h3 class="features-title">Внимание к деталям</h3>
+                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию
                         позиции.</p>
                 </li>
                 <li>
-                    <h3 class="list-title">Пунктуальность</h3>
-                    <p class="list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                    <h3 class=featurest-title">Пунктуальность</h3>
+                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
                         собой.</p>
                 </li>
 
                 <li>
-                    <h3 class="list-title">Планирование</h3>
-                    <p class="list-text">Равным образом консультация с широким активом в значительной степени
+                    <h3 class="features-title">Планирование</h3>
+                    <p class="features-text">Равным образом консультация с широким активом в значительной степени
                         обуславливает.</p>
                 </li>
 
                 <li>
-                    <h3 class="list-title">Современные технологии</h3>
-                    <p class="list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                    <h3 class=featurest-title">Современные технологии</h3>
+                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
@@ -76,35 +76,35 @@
         </section>
 
         <section class="team">
-            <h2 class="about-title">Наша команда</h2>
+            <h2 clinfo-title">Наша команда</h2>
             <ul class="list">
                 <li>
                     <img src="./img/designer.jpg" alt="Product designer" width="270">
                     <h3 class="name">Игорь Демьяненко</h3>
-                    <p class="name-text" lang="en"> Product Designer</p>
+                    <p class="info" lang="en"> Product Designer</p>
                 </li>
                 <li>
                     <img src="./img/frontend.jpg" alt="Frontend developer" width="270">
                     <h3 class="name">Ольга Репина</h3>
-                    <p class="name-text" lang="en">Frontend Developer</p>
+                    <p class="info" lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./img/marketing.jpg" alt="Marketing" width="270">
                     <h3 class="name">Николай Тарасов</h3>
-                    <p class="name-text" lang="en">Marketing</p>
+                    <p class="info" lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./img/uidesigner.jpg" alt="Ui designer" width="270">
                     <h3 class="name">Михаил Ермаков</h3>
-                    <p class="name-text" lang="en">UI Designer</p>
+                    <p class="info" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer class="contact-section">
+    <footer class="contacts">
         <a class="logo" lang="en" href="./index.html" target="_blank" rel="noreferrer noopener"><span
-                class="logo-first">Web</span>Studio</a>
+                class="logo-first">Web</span><span class="logo-second">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <address>
             <a class="contact-inf" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
