--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
 
     <footer class="contact-section">
         <a class="logo" lang="en" href="./index.html" target="_blank" rel="noreferrer noopener"><span
-                class="logo-first">Web</span>Studio</a>
+                class="logo-first">Web</span><span class="logo-second">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <address>
             <a class="contact-inf" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
