--- a/portfolio.html
+++ b/portfolio.html
@@ -13,15 +13,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
-<body class="body">
-    <header>
-        <nav>
+<body class="body"title
+        <nav class="navigation">
             <a class="logo" lang="en" href="./index.html" target="_blank" rel="noreferrer noopener"><span
                     class="logo-first">Web</span>Studio</a>
             <ul class="list">
-                <li><a class="navigation" href="./index.html">Студия</a></li>
-                <li><a class="navigation current" href="#Портфолио">Портфолио</a></li>
-                <li><a class="navigation" href="#Контакты">Контакты</a></li>
+                <li><a class="navigation-list" href="./index.html">Студия</a></li>
+                <li><a class="navigation-list current" href="#Портфолио">Портфолио</a></li>
+                <li><a class="navigation-list" href="#Контакты">Контакты</a></li>
             </ul>
         </nav>
         <ul class="list">
@@ -44,71 +43,71 @@
             <ul class="list list-menu">
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-1.jpg" alt="Сайт">
-                        <h2 class="list-header">Технокряк</h2>
-                        <p class="list-header-text">Веб-сайт</p>
+                        <h2 class="title">Технокряк</h2>
+                        <p class="title-info">Веб-сайт</p>
                     </a>
                     
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-2.jpg" alt="Дизайн постера" width="370"
                             height="294">
-                        <h2 class="list-header">Постер New Orlean vs Golden Star</h2>
-                        <p class="list-header-text">Дизайн</p>
+                        <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                        <p class="title-info">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-3.jpg" alt="Приложение для ресторана"
                             width="370" height="294">
-                        <h2 class="list-header">Ресторан Seafood</h2>
-                        <p class="list-header-text">Приложение</p>
+                        <h2 class="title">Ресторан Seafood</h2>
+                        <p class="title-info">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-4.jpg" alt="Дизайн проект" width="370"
                             height="294">
-                        <h2 class="list-header">Проект Prime</h2>
-                        <p class="list-header-text">Маркетинг</p>
+                        <h2 class="title">Проект Prime</h2>
+                        <p class="title-info">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-5.jpg" alt="Дизайн приложения" width="370"
                             height="294">
-                        <h2 class="list-header">Проект Boxes</h2>
-                        <p class="list-header-text">Приложение</p>
+                        <h2 class="title">Проект Boxes</h2>
+                        <p class=title-infot">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-6.jpg" alt="Дизайн сайта" width="370"
                             height="294">
-                        <h2 class="list-header">Inspiration has no Borders</h2>
-                        <p class="list-header-text">Веб-сайт</p>
+                        <h2 class="title">Inspiration has no Borders</h2>
+                        <p class="title-info">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-7.jpg" alt="Дизайн издания" width="370"
                             height="294">
-                        <h2 class="list-header">Издание Limited Edition</h2>
-                        <p class="list-header-text">Дизайн</p>
+                        <h2 class="title">Издание Limited Edition</h2>
+                        <p class="title-info">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-8.jpg" alt="Проект" width="370" height="294">
-                        <h2 class="list-header">Проект LAB</h2>
-                        <p class="list-header-text">Маркетинг</p>
+                        <h2 class="title">Проект LAB</h2>
+                        <p class="title-info">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a class="link" href=""><img src="./img/portfolio/img-9.jpg" alt="Дизайн приложения" width="370"
                             height="294">
-                        <h2 class="list-header">Growing Business</h2>
-                        <p class="list-header-text">Приложение</p>
+                        <h2 class="title">Growing Business</h2>
+                        <p class="title-info">Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer class="contact-section">
+    <footer class="contacts">
         <a class="logo" lang="en" href="./index.html" target="_blank" rel="noreferrer noopener"><span
                 class="logo-first">Web</span><span class="logo-second">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
