--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
-<body class="body"title
+<body class="body">
+    <header>
         <nav class="navigation">
             <a class="logo" lang="en" href="./index.html" target="_blank" rel="noreferrer noopener"><span
                     class="logo-first">Web</span>Studio</a>
@@ -73,7 +74,7 @@
                     <a class="link" href=""><img src="./img/portfolio/img-5.jpg" alt="Дизайн приложения" width="370"
                             height="294">
                         <h2 class="title">Проект Boxes</h2>
-                        <p class=title-infot">Приложение</p>
+                        <p class="title-info">Приложение</p>
                     </a>
                 </li>
                 <li>
@@ -110,7 +111,7 @@
     <footer class="contacts">
         <a class="logo" lang="en" href="./index.html" target="_blank" rel="noreferrer noopener"><span
                 class="logo-first">Web</span><span class="logo-second">Studio</span></a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <address class="address-info">г. Киев, пр-т Леси Украинки, 26</address>
         <address>
             <a class="contact-inf" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
             <br><a class="contact-inf" href="tel:+380961111111">+38 096 111 11 11</a>
