--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         позиции.</p>
                 </li>
                 <li>
-                    <h3 class=featurest-title">Пунктуальность</h3>
+                    <h3 class="features-title">Пунктуальность</h3>
                     <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
                         собой.</p>
                 </li>
@@ -59,7 +59,7 @@
                 </li>
 
                 <li>
-                    <h3 class=featurest-title">Современные технологии</h3>
+                    <h3 class="features-title">Современные технологии</h3>
                     <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
